--- a/ui_graph/src/App.css
+++ b/ui_graph/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+.app-container {
+  display: flex;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sidebar {
+  width: 20%;
+  background-color: #000;
+  color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
+  /*border-radius: 15px 0 0 15px;*/
 }
 
-.App-link {
-  color: #61dafb;
+.sidebar h2 {
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sidebar nav ul {
+  list-style: none;
+  padding: 0;
 }
+
+.sidebar nav ul li {
+  margin: 10px 0;
+}
+
+.sidebar nav ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.sidebar nav ul li a:hover {
+  text-decoration: underline;
+}
+
+.graph-area {
+  width: 80%;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 0 15px 15px 0;
+  padding: 20px;
+}
+
