--- a/ui_graph/src/components/Sidebar.css
+++ b/ui_graph/src/components/Sidebar.css
@@ -1,7 +1,42 @@
+
+
+.sidebar {
+    width: 20%;
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    /*border-radius: 15px 0 0 15px;*/
+}
+
+
 .sidebar hr {
     border: 0;
     border-top: 1px solid #fff;
     width: 100%;
     margin: 15px 0;
-  }
-  
+}
+
+.sidebar h2 {
+    margin-bottom: 20px;
+}
+
+.sidebar nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+.sidebar nav ul li {
+    margin: 10px 0;
+}
+
+.sidebar nav ul li a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.sidebar nav ul li a:hover {
+    text-decoration: underline;
+}
