--- a/ui_graph/src/components/GraphArea.css
+++ b/ui_graph/src/components/GraphArea.css
@@ -1,8 +1,31 @@
 
 .graph-area {
-    width: 80%;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 0 15px 15px 0;
-    padding: 20px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    overflow: hidden;
   }
+  
+  .graph-area h3 {
+    margin-bottom: 10px;
+  }
+  
+  .graph-canvas {
+
+    /*flex: 1;
+    width: 100%;
+    height: 100%;*
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;*/
+    display: block;
+  position: relative;
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
+  border: 1px solid black;
+  background-color: black;
+  }
+
+  
