--- a/ui_graph/src/components/GraphArea.css
+++ b/ui_graph/src/components/GraphArea.css
@@ -75,4 +75,40 @@
     gap: 12px; /* Espaciado general */
   }
   
+  .path-message {
+    
+    /*display: inline-flex;*/
+    position: absolute;
+    top: 550px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: linear-gradient(135deg, #131314, #000000);
+    color: white;
+    padding: 15px 30px;
+    border-radius: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    opacity: 0.;
+    z-index: 1000; /* Asegúrate de que el mensaje esté al frente */
+    animation: fadeIn 1s ease-in-out forwards, slideDown 1s ease-out forwards;
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+  @keyframes slideDown {
+    from {
+      transform: translate(-20%, -20px);
+    }
+    to {
+      transform: translate(-20%, 0px);
+    }
+  }
   
