--- a/ui_graph/src/components/Sidebar.css
+++ b/ui_graph/src/components/Sidebar.css
@@ -30,6 +30,10 @@
 
 .sidebar nav ul li {
     margin: 10px 0;
+    padding: 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .sidebar nav ul li a {
@@ -38,5 +42,25 @@
 }
 
 .sidebar nav ul li a:hover {
-    text-decoration: underline;
+    /*text-decoration: underline;*/
+    background-color: #555;
+    color: #fff;
+}
+
+.sidebar nav ul li.selected {
+    background-color: #1e90ff; /* Color resaltado */
+    color: #fff;
+    font-weight: bold;
+}
+
+.sidebar nav ul li a {
+    text-decoration: none;
+    color: inherit; /* Heredar el color del elemento padre */
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+
+.sidebar nav ul li a:hover {
+    text-decoration: wavy;
 }
