--- a/ui_graph/src/components/Sidebar.css
+++ b/ui_graph/src/components/Sidebar.css
@@ -1,5 +1,4 @@
 
-
 .sidebar {
     width: 20%;
     background-color: #000;
@@ -10,7 +9,6 @@
     padding: 20px;
     /*border-radius: 15px 0 0 15px;*/
 }
-
 
 .sidebar hr {
     border: 0;
@@ -36,13 +34,7 @@
     transition: background-color 0.3s, color 0.3s;
 }
 
-.sidebar nav ul li a {
-    text-decoration: none;
-    color: #fff;
-}
-
-.sidebar nav ul li a:hover {
-    /*text-decoration: underline;*/
+.sidebar nav ul li:hover {
     background-color: #555;
     color: #fff;
 }
