🚀 Disable buttons functionality is up
Disable buttons

--- a/ui_graph/src/components/ControlPanel.css
+++ b/ui_graph/src/components/ControlPanel.css
@@ -1,13 +1,13 @@
 .controls-container {
-    /*align-items: center;*/
+    align-items: center;
     display: flex;
-    justify-content: flex-start;
+    /*justify-content: flex-start;*/
     gap: 12px; /* Espacio entre botones */
     margin-bottom: 15px;
   }
   
   .modern-button {
-    display: inline-flex;
+    /*display: inline-flex;*/
     align-items: center;
     justify-content: center;
     gap: 8px;
