--- a/ui_graph/src/components/ControlPanel.css
+++ b/ui_graph/src/components/ControlPanel.css
@@ -1,7 +1,11 @@
 .controls-container {
-    align-items: center;
+    
     display: flex;
+    /*flex-direction: column; /* Coloca los botones en columna */
+    justify-content: center;
     /*justify-content: flex-start;*/
+    align-items: center;
+    flex-direction: row; /* Coloca los botones en columna */
     gap: 12px; /* Espacio entre botones */
     margin-bottom: 15px;
   }
