--- a/ui_graph/src/components/GraphArea.css
+++ b/ui_graph/src/components/GraphArea.css
@@ -1,7 +1,7 @@
 
 .graph-area {
     flex: 1;
-    text-align: center;
+    align-items: center;
     display: flex;
     flex-direction: column;
     padding: 10px;
@@ -9,6 +9,7 @@
   }
   
   .graph-area h3 {
+    text-align: center;
     margin-bottom: 10px;
   }
   
@@ -20,37 +21,43 @@
     overflow: hidden;
     display: flex;
     flex-wrap: wrap;*/
-    display: block;
+    /*display: block;
   position: relative;
   width: 100%;
   height: 500px;
   overflow: hidden;
   border: 1px solid black;
-  background-color: black;
+  background-color: black;*/
+  position: relative;
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+    border: 1px solid black;
+    background-color: black;
   }
 
   .graph-controls {
     display: flex;
     gap: 12px;
-    margin-bottom: 10px; /* Espaciado con el panel */
+    margin-bottom: 10px; 
     align-items: center;
   }
-  
+  /*
   .controls-container {
     display: flex;
-    justify-content: flex-start; /* Alineación horizontal */
-    gap: 8px; /* Espaciado entre botones */
-    margin-bottom: 10px; /* Espaciado con el canvas */
-  }
+    justify-content: flex-start; 
+    gap: 8px; 
+    margin-bottom: 10px; 
+  }*/
   
   .styled-button {
     display: inline-flex;
     align-items: center;
     gap: 6px;
-    background-color: #007bff; /* Azul */
+    background-color: #007bff; 
     color: white;
     font-size: 14px;
-    padding: 6px 12px; /* Tamaño más compacto */
+    padding: 6px 12px; 
     border: none;
     border-radius: 4px;
     cursor: pointer;
