--- a/ui_graph/src/components/GraphArea.css
+++ b/ui_graph/src/components/GraphArea.css
@@ -10,7 +10,7 @@
   
   .graph-area h3 {
     text-align: center;
-    margin-bottom: 10px;
+    margin: 10px auto;
   }
   
   .graph-canvas {
@@ -21,19 +21,19 @@
     overflow: hidden;
     display: flex;
     flex-wrap: wrap;*/
-    /*display: block;
+    display: block;
   position: relative;
   width: 100%;
   height: 500px;
   overflow: hidden;
   border: 1px solid black;
-  background-color: black;*/
-  position: relative;
+  background-color: black;
+  /*position: relative;
     width: 100%;
     height: 500px;
     overflow: hidden;
     border: 1px solid black;
-    background-color: black;
+    background-color: black;*/
   }
 
   .graph-controls {
