--- a/ui_graph/src/components/GraphArea.css
+++ b/ui_graph/src/components/GraphArea.css
@@ -90,7 +90,8 @@
     top: 550px;
     left: 50%;
     transform: translateX(-50%);
-    background: linear-gradient(135deg, #131314, #000000);
+    /*background: linear-gradient(135deg, #131314, #000000);*/
+    background-color: rgb(0, 0, 0, 0.5);
     color: white;
     padding: 15px 30px;
     border-radius: 10px;
