--- a/ui_graph/src/components/GraphArea.css
+++ b/ui_graph/src/components/GraphArea.css
@@ -3,7 +3,7 @@
     flex: 1;
     align-items: center;
     display: flex;
-    flex-direction: column;
+    /*flex-direction: column;*/
     padding: 10px;
     overflow: hidden;
   }
@@ -14,20 +14,23 @@
   }
   
   .graph-canvas {
-
-    /*flex: 1;
-    width: 100%;
+    
+    flex: 1;
+    /*width: 100%;
     height: 100%;*
     overflow: hidden;
     display: flex;
     flex-wrap: wrap;*/
-    display: block;
+    /*display: block;*/
   position: relative;
   width: 100%;
   height: 500px;
   overflow: hidden;
   border: 1px solid black;
   background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /*position: relative;
     width: 100%;
     height: 500px;
